@@ -158,7 +158,7 @@ int main()
 
   //dolfin_set("monitor convergence", true);
 
-  test2();
+  test1();
 
   return 0;
 }
